[FIX/#50] A1 PR 리뷰 피드백 반영
Provider 수명주기와 타임아웃, 구조화 출력 복구 및 strict schema 호환성을 보완한다.\n문장 경계와 sentence SSOT, finding 저장 중복 및 Oracle Y/N 관례를 정리하고 방어 테스트를 추가한다.